# 6_cicd

./: .gitlab-ci.yml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  entry.sh  export.txt  main.py  nginx.conf  pyproject.toml
app/: models.py  serializers.py  views.py
app/services/: qa.py
db/: database.py  models.py
django/: README.md  manage.py  requirements.txt
django/app/: models.py  serializers.py  tests.py  views.py
django/app/migrations/: 0001_initial.py
django/app/services/: operations.py  qa.py
django/help_students/: settings.py  urls.py
help_students/: asgi.py  settings.py  urls.py  wsgi.py
models/: message.py  user.py
myenv/: pyvenv.cfg
old/pr1/: pr1.py
old/pr2/: pr2.py
pr1/: pr1.py  ПР1.docx
pr2/: ПР2.docx
